<?xml version="1.0" encoding="utf-8"?><!-- 차트탭 & 가로모드 차트 공통 메뉴 -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chart_setting"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:ignore="SpUsage">

    <!-- 일, 주, 월, 분, 틱 메뉴 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_container"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/kfit_bg_chart_common_menu_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/menu_landscape"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/menu_select_day"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/kfit_bg_chart_common_menu_selected"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/chart_header_layout_text3"
            android:textColor="@drawable/kfit_bg_chart_common_menu_drop_down_text"
            android:textSize="@dimen/kfit_chart_option_bar_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/menu_select_week"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/menu_select_week"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/kfit_bg_chart_common_menu_selected"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/chart_header_layout_text4"
            android:textColor="@drawable/kfit_bg_chart_common_menu_drop_down_text"
            android:textSize="@dimen/kfit_chart_option_bar_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/menu_select_month"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/menu_select_day"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/menu_select_month"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/kfit_bg_chart_common_menu_selected"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/chart_header_layout_text5"
            android:textColor="@drawable/kfit_bg_chart_common_menu_drop_down_text"
            android:textSize="@dimen/kfit_chart_option_bar_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/menu_select_minute"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/menu_select_week"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/menu_select_minute"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/kfit_bg_chart_common_menu_selected"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/menu_select_tick"
            app:layout_constraintHorizontal_weight="1.7"
            app:layout_constraintStart_toEndOf="@+id/menu_select_month"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/minute_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/chart_header_layout_text2"
                android:textColor="@drawable/kfit_bg_chart_common_menu_drop_down_text"
                android:textSize="@dimen/kfit_chart_option_bar_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/minute_icon"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/minute_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:contentDescription="@string/chart_common_menu_drop_down_minute_description"
                android:src="@drawable/kfit_bg_chart_common_menu_drop_down_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/minute_text"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/menu_select_tick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/kfit_bg_chart_common_menu_selected"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1.7"
            app:layout_constraintStart_toEndOf="@+id/menu_select_minute"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tick_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/chart_header_layout_text1"
                android:textColor="@drawable/kfit_bg_chart_common_menu_drop_down_text"
                android:textSize="@dimen/kfit_chart_option_bar_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tick_icon"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/tick_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:contentDescription="@string/chart_common_menu_drop_down_tick_description"
                android:src="@drawable/kfit_bg_chart_common_menu_drop_down_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tick_text"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 가로모드 전환 메뉴 -->
    <ImageView
        android:id="@+id/menu_landscape"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/chart_option_bar_icon_background"
        android:contentDescription="@string/chart_common_menu_landscape_description"
        android:paddingHorizontal="10dp"
        android:scaleType="center"
        android:src="@drawable/kfit_service_ic_card_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/menu_setting"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/menu_container"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/kfit_grey999_black_alpha"
        tools:tint="@color/kfit_grey999_black_alpha" />

    <!-- 전체 설정 메뉴 -->
    <ImageView
        android:id="@+id/menu_setting"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/chart_option_bar_icon_background"
        android:contentDescription="@string/chart_common_menu_setting_description"
        android:paddingHorizontal="10dp"
        android:scaleType="center"
        android:src="@drawable/kfit_core_ic_navi_setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/menu_landscape"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/kfit_grey999_black_alpha"
        tools:tint="@color/kfit_grey999_black_alpha" />

</androidx.constraintlayout.widget.ConstraintLayout>